--- a/src/emby-theater-linux.html
+++ b/src/emby-theater-linux.html
@@ -435,6 +435,7 @@
                                             <li><a href="#flatpak">Flatpak</a></li>
                                             <li><a href="#deb">Linux Mint</a></li>
                                             <li><a href="#opensuse">OpenSuse</a></li>
+                                            <li><a href="emby-theater-qnap.html">QNAP</a></li>
                                             <li><a href="emby-theater-rpi.html">Raspberry Pi</a></li>
                                             <li><a href="#snap">Snap</a></li>
                                             <li><a href="#deb">Ubuntu</a></li>
@@ -479,16 +480,6 @@
                                     </div>
 
                                     <div style="margin-bottom:2.5em;">
-                                        <h2><a style="color:inherit;" name="flatpak">Flatpak</a></h2>
-                                        <div>Download one of the following packages based on your system architecture:</div>
-                                        <ul style="margin:.5em 0 1em 2em;">
-                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-flatpak_3.0.15_x86_64.flatpak" title="Emby Theater for X64">X64</a></li>
-                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-flatpak_3.0.15_aarch64.flatpak" title="Emby Theater for Arm64 (aarch64)">Arm64 (aarch64)</a></li>
-                                        </ul>
-                                        <div>Install Steps</div>
-                                    </div>
-
-                                    <div style="margin-bottom:2.5em;">
                                         <h2><a style="color:inherit;" name="opensuse">OpenSuse</a></h2>
                                         <div>Install one of the following based on your system architecture:</div>
                                         <ul style="margin:.5em 0 1em 1em;">
@@ -497,6 +488,16 @@
                                             <li>Armv7hl: <code>zypper install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_armv7hl.rpm</code></li>
                                         </ul>
                                         <div style="margin-top:1em;">Run Emby Theater by launching from your desktop applications list.</div>
+                                    </div>
+
+                                    <div style="margin-bottom:2.5em;">
+                                        <h2><a style="color:inherit;" name="flatpak">Flatpak</a></h2>
+                                        <div>Download one of the following packages based on your system architecture:</div>
+                                        <ul style="margin:.5em 0 1em 2em;">
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-flatpak_3.0.15_x86_64.flatpak" title="Emby Theater for X64">X64</a></li>
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-flatpak_3.0.15_aarch64.flatpak" title="Emby Theater for Arm64 (aarch64)">Arm64 (aarch64)</a></li>
+                                        </ul>
+                                        <div>Install Steps</div>
                                     </div>
 
                                     <div style="margin-bottom:2.5em;">
