--- a/src/emby-theater-qnap.html
+++ b/src/emby-theater-qnap.html
@@ -407,7 +407,7 @@
             <div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
-                        <h1>Emby Theater for QNAP</h1>
+                        <h1>Emby Theater for QNAP NAS</h1>
                     </div>
                 </div>
             </div>
@@ -427,6 +427,16 @@
                                     </div>
 
                                     <h2>Installation</h2>
+                                    <ol class="instructionList">
+                                        <li>
+                                            <div>Download one of the following packages depending on your QNAP NAS model:</div>
+                                            <ul>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-qnap_3.0.15_x86_64.qpkg">Intel/AMD 64-bit</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>Install Emby Theater using the QNAP Web interface.</li>
+                                        <li>Start Emby Theater using the QNAP Web interface.</li>
+                                    </ol>
                                 </div>
                             </div>
                         </div>
