--- a/src/emby-theater-macos.html
+++ b/src/emby-theater-macos.html
@@ -426,7 +426,7 @@
                                         Install in the <a href="https://itunes.apple.com/us/app/emby/id992180193?ls=1&mt=8" target="_blank">MacOS App Store</a>.
                                     </p>
                                     <p>
-                                        Or <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/macos/Emby.app.zip" target="_blank">download and install</a> the latest version manually. While we update the version in the app store as often as we can, the downloaded version may sometimes be newer than the store version.
+                                        Or <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/macos/Emby.app.zip">download and install</a> the latest version manually. While we update the version in the app store as often as we can, the downloaded version may sometimes be newer than the store version.
                                     </p>
                                     <p style="margin-top: 2em;">
                                         Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.
