--- a/src/emby-theater-linux.html
+++ b/src/emby-theater-linux.html
@@ -429,6 +429,7 @@
                                     <div style="margin-bottom:2em;">
                                         <h2>Installation</h2>
                                         <ul style="margin:.5em 0 1em 2em;">
+                                            <li><a href="#archlinux">Arch Linux</a></li>
                                             <li><a href="#centos">CentOS</a></li>
                                             <li><a href="#deb">Debian</a></li>
                                             <li><a href="#fedora">Fedora</a></li>
@@ -454,6 +455,13 @@
                                         <div><code>sudo apt-get update</code></div>
                                         <div><code>sudo apt-get install cec-utils libasound2 libatomic1 libc6 libegl1 libgcc-s1 libpulse0 libstdc++6</code></div>
                                         <div><code>sudo dpkg -i /path/to/deb</code></div>
+                                        <div style="margin-top:1em;">Run Emby Theater by launching from your desktop applications list.</div>
+                                    </div>
+
+                                    <div style="margin-bottom:2.5em;">
+                                        <h2><a style="color:inherit;" name="archlinux">Arch Linux</a></h2>
+                                        <div><strong>Run the following:</strong></div>
+                                        <p><code>pacman -S emby-theater</code></p>
                                         <div style="margin-top:1em;">Run Emby Theater by launching from your desktop applications list.</div>
                                     </div>
 
