Update to new Stripe checkout

--- a/src/premiere-ext.html
+++ b/src/premiere-ext.html
@@ -322,9 +322,62 @@
         @media (max-width: 479px) {
         }
         /** Ultimate: Media Responsive - **/
+       .stripeButton {
+            background:linear-gradient(to bottom, #2d4ba3 5%, #3b6999 100%);
+            background-color:#2d4ba3;
+            border-radius:8px;
+            display:inline-block;
+            cursor:pointer;
+            color:#ffffff;
+            font-family:Arial;
+            font-size:14px;
+            font-weight:bold;
+            padding:13px 10px;
+            text-decoration:none;
+            text-shadow:0px 1px 0px #3d768a;
+            margin-top: -14px;
+        }
+        .stripeButton:hover {
+            background:linear-gradient(to bottom, #3b6999 5%, #2d4ba3 100%);
+            background-color:#3b6999;
+        }
+        .stripeButton:active {
+            position:relative;
+            top:1px;
+        }
     </style>
 
+    <script src="https://js.stripe.com/v3"></script>
+
     <script type="text/javascript">
+
+       var stripe = Stripe('pk_live_lVflUNchyMpL5tkBP5dVPTlv');
+
+        function stripeCheckout(id, mode)
+        {
+           stripe.redirectToCheckout({
+                lineItems: [{
+                  // Define the product and price in the Dashboard first, and use the price
+                  // ID in your client-side code. You may also pass a SKU id into the `price`
+                  // field
+                  price: id,
+                  quantity: 1
+                }],
+                mode: mode,
+                clientReferenceId: id,
+                successUrl: 'https://emby.media/thank-you.html',
+                cancelUrl: 'https://emby.media/premiere.html'
+            }).then(function (result) {
+              if (result.error) {
+                /*
+                 * If `redirectToCheckout` fails due to a browser or network
+                 * error, display the localized error message to your customer.
+                 */
+                var displayError = document.getElementById('error-message');
+                displayError.textContent = result.error.message;
+              }
+            });
+        }
 
         function togglePaymentButtons(cb)
         {
@@ -473,15 +526,7 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=WTKCHAMPM6TTW"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 45 Monthly" data-amount="1199" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="Premiere45Monthly" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="1199" />
-                                                    </form>
+                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.45.monthly', 'subscription')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -512,15 +557,7 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=EE6XAJNSGWSJL"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 75 Monthly" data-amount="1999" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="Premiere75Monthly" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="1999" />
-                                                    </form>
+                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.75.monthly', 'subscription')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -549,11 +586,11 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <h1 style="text-align: center;">Lifetime/Annual Upgrades</h1>
-                                    <h2 style="text-align: center;color: red">These options are only valid with an existing Emby Premiere Lifetime or Yearly key</h2>
+                                    <h1 style="text-align: center;">Upgrades for EXISTING keys</h1>
+                                    <h2 style="text-align: center;color: red">These options are only valid with an existing Emby Premiere Lifetime or Yearly key on the same email address you use here</h2>
                                     <p style="text-align: center;">
                                         <input type="checkbox" onclick="togglePaymentButtons(this)">
-                                        <label for="togglePaymentButtons">I understand - show the payment options</label>
+                                        <label for="togglePaymentButtons">I understand - show the payment options (refunds will incur fees)</label>
                                     </p>
                                     <p></p>
                                 </div>
@@ -587,15 +624,7 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4JHC8VWBP4XSQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 45 Monthly" data-amount="599" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="PremiereL45Monthly" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="599" />
-                                                    </form>
+                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.45.monthly.addon', 'subscription')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -626,15 +655,7 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=D3ZZWX7758UQG"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 45 Lifetime" data-amount="9900" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="PremiereL45" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="9900" />
-                                                    </form>
+                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTfdBCVt2QGDKH44Epk9oF', 'payment')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -665,15 +686,7 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=8ZVXTCUPWYJJQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 75 Monthly" data-amount="1199" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="PremiereL75Monthly" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="1199" />
-                                                    </form>
+                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.75.monthly.addon', 'subscription')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
